--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,7 @@
     "config": "^3.3.11",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mocha": "^10.3.0",
     "mongoose": "^5.13.14",
     "supertest": "^6.3.4"
